--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Chathura&display=swap" rel="stylesheet">
-    <link rel="icon" href="images/chatRoom_logo.png" type="image/x-icon"/>
+    <link rel="icon" href="../images/chatRoom_logo.png" type="image/x-icon"/>
     <link rel="stylesheet" href="style.css">
     <title>ChatRoom</title>
 </head>
